Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -4047,8 +4047,8 @@ void WebPageProxy::didStartProvisionalLoadForFrameShared(Ref<WebProcessProxy>&& 
     RELEASE_LOG_IF_ALLOWED(Loading, "didStartProvisionalLoadForFrame: frameID = %" PRIu64, frameID.toUInt64());
 
     auto transaction = m_pageLoadState.transaction();
-
-    if (navigation)
+    bool fromAlternateHTMLAPI = !unreachableURL.isEmpty() && unreachableURL == m_pageLoadState.pendingAPIRequestURL();
+    if (navigation || fromAlternateHTMLAPI)
         m_pageLoadState.clearPendingAPIRequest(transaction);
 
     if (frame->isMainFrame()) {
